Fixed post pagination spacing in mobile

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -295,6 +295,10 @@ figcaption {
   @include pagination-container($center:true);
   ul.page-numbers {
     @include pagination($center:true, $base-style:false);
+    margin-bottom: rem-calc(14);
+    li {
+      margin-bottom: rem-calc(5);
+    }
   }
 }
 ul.page-numbers {
@@ -303,11 +307,8 @@ ul.page-numbers {
   span.current {
     @include pagination-current-item($has-anchor: false);
     display: inline-block;
-    /*
-    @todo: Delete the 2 properties beneath, this will probably be fixed in a
-    future commit to foundation (it's now on a commit request) */
-    height: auto;
-    padding: $pagination-link-pad;
+    /* @todo: remove this once PR is excepted: https://github.com/zurb/foundation/pull/4493 */
+    @include radius;
   }
 }
 .pagination-title {
