--- a/src/scss/foundation/_settings.scss
+++ b/src/scss/foundation/_settings.scss
@@ -730,7 +730,7 @@ $list-style-position: inside;
 // $include-html-nav-classes: $include-html-classes;
 
 // We use these to control the pagination container
-// $pagination-height: rem-calc(24);
+$pagination-height: inherit; //rem-calc(24);
 // $pagination-margin: rem-calc(-5);
 
 // We use these to set the list-item properties
